microservice/kube/strategy-manager-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: strategy-manager-service
  name: strategy-manager-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strategy-manager-service
      version: v1
  #strategy: {}
  template:
    metadata:
      labels:
        app: strategy-manager-service
        version: v1
    spec:
      serviceAccountName: k8s-101-role
      containers:
      - image: localhost:5000/algotrade/strategy-manager-service
        name: strategy-manager-service
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        command: ["/app/main"]

        # readinessProbe:
        #   exec:
        #     command:
        #     - curl
        #     - 
        # resources: 
        #   requests:
        #     cpu: 300m
        #     memory: 256Mi
        #   limits:
        #     cpu: 500m
        #     memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: strategy-manager-service
  name: strategy-manager-service-srv
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http
    name: http
  selector:
    app: strategy-manager-service
