microservice/kube/strategy-manager-service/strategy-manger-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: strategy-manager-service
  namespace: default
spec:
  hosts:
  - strategy.api.algotrade.dev
  - strategy-manager-service-srv.default.svc.cluster.local
  gateways:
  - platform-srv-gateway
  - mesh
  http:
  - name: strategy-manager-service
    match:
    - uri:
        prefix: /v1
    route:
    - destination:
        host: strategy-manager-service-srv.default.svc.cluster.local
        port:
          number: 8080
    corsPolicy:
      allowOrigins:
      - exact: https://srv.algotrade.dev
      - exact: http://localhost:3000 #for react opened at local dev
      allowMethods:
      - POST
      - GET
      - PATCH
      allowHeaders:
      - Content-Type
      - Authorization
      # - Cookie
